Second commit with added HTML to recreate a rough Google search page

--- a/home.html
+++ b/home.html
@@ -6,9 +6,15 @@
   </head>
 
   <body>
-    <h1>Hello world</h1>
+    <h1>freePol</h1>
+    <h2>a free data portal for political students</h2>
     <br />
-    <p>This is my first website.</p>
+    <form action="/search">
+        <input type="text" placeholder="type something to begin">
+        <button type="submit">Search</button>
+    </form>
+    <a id="p-left" href="www.google.com">I prefer to search with Google</a>
+    <a id="p-right" href="www.yahoo.com">I prefer using Yahoo</a>
   </<body>
 
 </html>
