center content with margin for left right text under bar

--- a/home.html
+++ b/home.html
@@ -6,15 +6,17 @@
   </head>
 
   <body>
-    <h1>freePol</h1>
-    <h2>a free data portal for political students</h2>
-    <br />
-    <form action="/search">
-        <input type="text" placeholder="type something to begin">
-        <button type="submit">Search</button>
-    </form>
-    <a id="p-left" href="www.google.com">I prefer to search with Google</a>
-    <a id="p-right" href="www.yahoo.com">I prefer using Yahoo</a>
+    <div id="content">
+      <h1>freePol</h1>
+      <h2>a free data portal for political students</h2>
+      <br />
+      <form action="/search">
+          <input type="text" placeholder="type something to begin">
+          <button type="submit">Search</button>
+      </form>
+      <a id="p-left" href="www.google.com">I prefer to search with Google</a>
+      <a id="p-right" href="www.yahoo.com">I prefer using Yahoo</a>
+    </div>
   </<body>
 
 </html>
