--- a/home.html
+++ b/home.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
   </head>
 
-  <body>
+  <body class="body">
     <div id="content">
-      <h1>freePol</h1>
-      <h2>a free data portal for political students</h2>
+      <h1 id="siteTitle">freePol</h1>
+      <h2 id="secondHeader">a free data portal for political students</h2>
       <br />
       <form action="/search">
           <input type="text" placeholder="type something to begin">
