--- a/home.html
+++ b/home.html
@@ -17,6 +17,6 @@
       <a id="p-left" href="www.google.com">I prefer to search with Google</a>
       <a id="p-right" href="www.yahoo.com">I prefer using Yahoo</a>
     </div>
-  </<body>
+  </body>
 
 </html>
