addition of heartbeat animation on main.css

--- a/home.html
+++ b/home.html
@@ -17,6 +17,13 @@
       <a id="p-left" href="www.google.com">I prefer to search with Google</a>
       <a id="p-right" href="www.yahoo.com">I prefer using Yahoo</a>
     </div>
+
+    <div>
+      <!-- <h1 class="back"></h1> -->
+    </div>
+    <div>
+      <h1 class="heart"></h1>
+    </div>
   </body>
 
 </html>
