changed mainConcent p to article with appropriate context

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
   </head>
 
-  <body class="body">
+  <main class="body">
     <div id="content">
       <h1 id="siteTitle">freePol</h1>
       <h2 id="secondHeader">a free data portal for political students</h2>
@@ -24,6 +24,6 @@
     <div>
       <h1 class="heart"></h1>
     </div>
-  </body>
+  </main>
 
 </html>
