simplified the h1 and h2 tag to be contained within header

--- a/secondHome.html
+++ b/secondHome.html
@@ -7,13 +7,10 @@
   </head>
 
   <body>
-    <div id="headerOne">
+    <header>
       <h1>Welcome to my second website</h1>
-    </div>
-
-    <div id="headerTwo">
       <h2>a portal to meet your business needs.</h2>
-    </div>
+    </header>
 
     <form>
       <input type="text" name="search" placeholder="type anything to continue">
